Added functionality like admin dashboard activities download bhav copy etc.